finish life histories, start articles

--- a/lifestories/fran.html
+++ b/lifestories/fran.html
@@ -203,11 +203,11 @@
                 </p>
 
                 <p>
-                  I have recently been told that I may have to have my left breast removed because it has undergone so much trauma that it's hard to get a crisp mammogram or ultrasound from it. I hope that doesn't happen, but I also know that the Intensive Journal method could help me deal with that, or any other situations that may come in future. As a teacher of writing and journal keeping, I have had countless experiences to write with other people undergoing their own illnesses and setbacks. Dr. Progoff developed his method as a non-analytic process to help each of us recognize our potential and activate it, and it has given me the courage to explore past situations and lay the groundwork for my future. Writing is a powerful healing tool, and the ProgoffTM method is the most powerful of all the methods of journal keeping that I have learned and use. 
+                  I have recently been told that I may have to have my left breast removed because it has undergone so much trauma that it's hard to get a crisp mammogram or ultrasound from it. I hope that doesn't happen, but I also know that the Intensive Journal method could help me deal with that, or any other situations that may come in future. As a teacher of writing and journal keeping, I have had countless experiences to write with other people undergoing their own illnesses and setbacks. Dr. Progoff developed his method as a non-analytic process to help each of us recognize our potential and activate it, and it has given me the courage to explore past situations and lay the groundwork for my future. Writing is a powerful healing tool, and the ProgoffTM method is the most powerful of all the methods of journal keeping that I have learned and use.
                 </p>
 
 
-                <!-- <hr> -->
+                  <hr class="trademark-line">
                 <p>
                   <em>"Intensive Journal" is a registered trademark of Jon Progoff and licensed to Dialogue House. © Copyright 2019. Reprinted with permission of the author.</em>
                 </p>
