--- a/lifestories/liz.html
+++ b/lifestories/liz.html
@@ -215,7 +215,7 @@
                 </p>
 
 
-                <!-- <hr> -->
+                <hr class="trademark-line">
                 <p>
                   <em>"Intensive Journal" is a registered trademark of Jon Progoff and licensed to Dialogue House. © Copyright 2019. Reprinted with permission of the author.</em>
                 </p>
