--- a/life-stories.html
+++ b/life-stories.html
@@ -105,7 +105,7 @@
                                 </ul>
 
                             </li>
-                            <li><a href="#">Articles</a></li>
+                            <li><a href="articles.html">Articles</a></li>
                             <li><a href="life-stories.html">Life Histories</a></li>
                             <li><a href="#">Newsletters</a></li>
                             <li><a href="#">Boosk and Audio</a></li>
@@ -248,11 +248,11 @@
     </a><em>by Pam Rivers</em>
                     </li>
                     <li>
-                        <a href="#">Grieving for My Sisters,
+                        <a href="lifestories/christines.html">Grieving for My Sisters,
     </a><em>by Christine Lang</em>
                     </li>
                     <li>
-                        <a href="#">Losing a Friend to Cancer,
+                        <a href="lifestories/kendra.html">Losing a Friend to Cancer,
     </a><em>by Kendra Holley</em>
                     </li>
                   </ul>
@@ -261,7 +261,7 @@
                   <h6>Domestic Violence </h6>
                   <ul class="article-link">
                     <li>
-                        <a href="#">Breaking Free From Domestic Violence,</a><em>by Pam Peterson</em>
+                        <a href="lifestories/pam-pete.html">Breaking Free From Domestic Violence,</a><em>by Pam Peterson</em>
                     </li>
 
                   </ul>
@@ -270,10 +270,7 @@
 </h6>
                   <ul class="article-link">
                     <li>
-                        <a href="#">Overcoming My Addiction,  </a><em>by Patricia Burns S</em>
-                    </li>
-                    <li>
-                        <a href="#">Developing Your Life In Retirement: A Conversation with Marge Warren,
+                        <a href="lifestories/amira.html">Developing Your Life In Retirement: A Conversation with Marge Warren,
      </a><em>  by Amira Pierce</em>
                     </li>
                   </ul>
@@ -281,7 +278,7 @@
                   <h6>Sexual Identity</h6>
                   <ul class="article-link">
                     <li>
-                        <a href="#">Embracing My Sexual Identity: an LGBT Perspective,
+                        <a href="lifestories/anthony.html">Embracing My Sexual Identity: an LGBT Perspective,
     </a><em>by Anthony S.</em>
                     </li>
                   </ul>
