--- a/lifestories/gayle.html
+++ b/lifestories/gayle.html
@@ -208,7 +208,7 @@ in the Throes of Pancreatic Cancer</h1>
                 </p>
 
 
-                <!-- <hr> -->
+                <hr class="trademark-line">
                 <p>
                   <em>"Intensive Journal" is a registered trademark of Jon Progoff and licensed to Dialogue House. © Copyright 2019. Reprinted with permission of the author.</em>
                 </p>
