--- a/lifestories/mathers.html
+++ b/lifestories/mathers.html
@@ -235,7 +235,7 @@ An unexpected part of the post-traumatic stress connection with my brain injury 
                 </p>
 
 
-                <!-- <hr> -->
+                <hr class="trademark-line">
                 <p>
                   <em>"Intensive Journal" is a registered trademark of Jon Progoff and licensed to Dialogue House. © Copyright 2019. Reprinted with permission of the author.</em>
                 </p>
