--- a/lifestories/rose.html
+++ b/lifestories/rose.html
@@ -216,7 +216,7 @@ The Intensive Journal process helped me identify my strengths. I began to identi
                 </p>
 
 
-                <!-- <hr> -->
+                  <hr class="trademark-line">
                 <p>
                   <em>"Intensive Journal" is a registered trademark of Jon Progoff and licensed to Dialogue House. © Copyright 2019. Reprinted with permission of the author.</em>
                 </p>
