--- a/reasons.html
+++ b/reasons.html
@@ -105,7 +105,7 @@
                                 </ul>
 
                             </li>
-                            <li><a href="#">Articles</a></li>
+                            <li><a href="articles.html">Articles</a></li>
                             <li><a href="life-stories.html">Life Histories</a></li>
                             <li><a href="#">Newsletters</a></li>
                             <li><a href="#">Boosk and Audio</a></li>
