--- a/articles.html
+++ b/articles.html
@@ -159,7 +159,7 @@
                   <h6 class="u-margin-top-small-2">About the Method:</h6>
                   <ul class="article-link">
                     <li>
-                        <a href="lifestories/cancer.html">The Intensive Journal® Process: A Path to Self-Discovery </a>by Kathy Juline, <em>Science of Mind Magazine,</em> July 1992, pp. 40.
+                        <a href="articles/path-article.html">The Intensive Journal® Process: A Path to Self-Discovery </a>by Kathy Juline, <em>Science of Mind Magazine,</em> July 1992, pp. 40.
                     </li>
                     <li>
                         <a href="lifestories/cancer.html">
@@ -225,13 +225,7 @@ October 1986, Volume 37, Number 5, pp. 43-46.
                       The Intensive Journal Target Prison Program </a> <em> by Jon Progoff </em> A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
                     </li>
 
-
                   </ul>
-
-
-
-
-
 
                 </div>
 
