--- a/life-stories.html
+++ b/life-stories.html
@@ -278,7 +278,7 @@
                   <h6>Sexual Identity</h6>
                   <ul class="article-link">
                     <li>
-                        <a href="lifestories/anthony.html">Embracing My Sexual Identity: an LGBT Perspective,
+                        <a href="lifestories/antony.html">Embracing My Sexual Identity: an LGBT Perspective,
     </a><em>by Anthony S.</em>
                     </li>
                   </ul>
