--- a/lifestories/antony.html
+++ b/lifestories/antony.html
@@ -154,52 +154,67 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Surviving the Emotional Consequences of Cancer</h1>
+                  <h1>Embracing My Sexual identity: an LGBT* Perspective</h1>
                   <!-- <p class="right-span">By Vic T.</p> -->
-                  <p>By Vic T.</p>
+                  <p>By Anthony S.</p>
 
                 <p>
-                  Having survived three separate bouts with cancer, I have found the Intensive Journal method to be an indispensable tool during times of hardship. During the thirty years that I have been using the method, it has helped me deal more effectively with the seriousness of a life-threatening illness and any emerging difficult issues and emotions.
+                  When I was six years and in the first grade of school, I found in the thin pages of the dictionary a picture of Hercules carefully and strategically covered in, you guessed it, only a fig leaf. I was immediately transfixed. I would return to that image many times that year admiring the attractiveness of the figure and wondering from just where my fascination came. Somehow, I knew enough at the time to keep my dictionary wanderings a secret.
                 </p>
 
                 <p>
-                  My first diagnosis of Melanoma came about in 1984, eleven years after I began using the Intensive Journal process. The doctor wasted no time in painting a bleak picture of my serious condition. As it turned out, my condition was worse than it should have been, as I had taken too long to seek treatment. I consequently began experiencing guilt and later fear, and would wake up at nights from a disturbing dream about death. Yet, as I was able to record the content of the dream and the physical symptoms related to my fear and anxiety from the dream, I could restore a certain calm and shift the focus away from the scary aspects. I also recalled Dr. Ira Progoff saying that often enough, dreams about death are not about physical death but about the end of a phase or period in our lives. Working with the method helped me realize that I was in fact moving into a different phase of my life by starting a new job at a new counseling center.
+                  Later in my grade school years, a friend told me about men who had sex with other men. He said they were called queers, that these men were freaks of nature. He said that these men were attracted to boys as well and that coming anywhere near one of them would make you queer too. I thought the story was fantastic, felt sorry for those men, but felt it best to keep my distance from such people. The whole story was creepy.
                 </p>
 
                 <p>
-                  I found several sections of the Intensive Journal workbook to be helpful in dealing with my new condition. I recalled Dr. Progoff saying that while you could record basically the same thing in different sections, the material would unfold quite uniquely because of the distinctive internal dynamics of each section. At first, I used mainly the Dialogue with the Body section, where I recorded the physical facts of my cancer, feedback from doctors on the various medical procedures, and dietary and routine changes. As time went on and the seriousness of the situation emerged, I also began recording in the Dialogue with Events, Situations & Circumstances section, dealing with the "Situation of my life" (which became an open-ended thematic line in my workbook entries) and the ongoing reality of living with cancer, the uncertainties of that condition, and the influence of that condition on myself and those close to me, especially my wife.
+                  When I was in high school, I told a handsome senior how much I liked the way he danced. He looked at me in astonishment and told me to mind my own business. I knew then that while we had started to be friends, I’d crossed a line with him. I should have kept this to myself, not been so open. The encounter started me thinking.
                 </p>
 
                 <p>
-                  The method also helped me to face the issue of death, as I could record into my workbook parts of books dealing with death and connect them with other entries in the feedback process. I was also able to see connections between different aspects of my life. For example, I realized that it was through the positive intervention of good friends that I was hired to work with the Pastoral Counseling Agency. I could therefore gain a broader perspective, keeping my mind from dwelling solely on the cancer and its deleterious effects.
+                Later, walking alone outside in the dark, it grew clear to me. I was different, strangely, even horribly different. I made an offer to God. I would gladly give up an arm if I could just be like the others. I realized at that moment in the dark that what I faced was going to be far worse than just keeping a dictionary’s secret. I was that queer my childhood friend had talked about. I was destined to be one of those creepy people who lived and preyed on the fringes of good society.
                 </p>
 
                 <p>
-                  My surgery went well, as far as could be determined at that time. However, five years later, I discovered a lump in my right armpit, and it, too, was diagnosed as malignant Melanoma. Again, the Intensive Journal method proved useful during the days that followed, in dealing with the numerous medical tests to determine if the cancer had spread beyond the lymph nodes. This time, not only did I have to deal with the physical aspects of my situation, but there was also the weight of why the cancer had returned, and what it meant in terms of future prognosis. I was again looking at the question of potential death in the Peaks, Depths, and Explorations section, which covers issues of ultimate concern. At the same time, I was helped to deal with what was happening in a more manageable form and to look at my situation in a more active way, instead of passively accepting or denying it.
+                That night I asked myself why couldn’t I be straight? How could I explain to people why I wasn’t attracted to girls? What could I do in my future so that no one would ever find out this truth? What lies would I have to tell? My secret had travelled with me over the years, but it was different now. My secret was turning into shame.
                 </p>
 
                 <p>
-                  The Intensive Journal method also helped me to consider options and listen to internal responses, and even to help me accept the assistance offered by others. For example, I remember a very touching experience of a group of good friends of different denominations, who came to our house to gather in prayer for the outcome of my second surgery the next day. I recall feeling a sense of gratitude for their fidelity and concern, and feeling the healing power of touch as they laid hands on my head or shoulders. I was able to incorporate this gratitude and other feelings about this profound experience into the Connections section, as both a physical and spiritual happening. The method proved to be a helpful way for me to prepare for entering surgery, and I could also preserve this moment as something to be treasured.
+                  Through college, and for a few years afterwards, shame told me to deny this possibility of a gay identity even to myself. If something was wrong, it was only because I hadn’t seen or done things correctly. If only I gave girls a chance everything would be alright. I could be straight if I tried hard enough. After several years, I found all of this to be a lie. But, I still couldn’t face my shame. Instead, I turned and receded into the closet.
                 </p>
 
                 <p>
-                  Recovery from my second surgery was difficult; all the lymph nodes under my right arm were removed and the physical therapy to regain use of the arm and the chemotherapy proved to be new adversities to overcome. Not only did the chemotherapy leave me extremely sick and exhausted (it had to be discontinued because it was damaging my liver), but other patients around me in the same condition who had received the same treatment passed away. The Intensive Journal method was invaluable in preventing me from becoming overwhelmed by it all.
+                  While a closet may be a very small space, it has many compartments. Each compartment is distinct and each place attempts to move further from the other. It only works if each compartment is kept separate, withdrawn and secret from the other. It takes a great deal of energy, deception, and withdrawal. And, withdraw I did, from family, workmates, and lovers, instead sliding into a compartmentalized life.
                 </p>
 
                 <p>
-                  By re-reading my entries in the workbook, I could look back and see the strengths I didn't know I had that helped me to overcome difficulties in the past. There were times that I wasn't sure I'd make it, but I did. Reading back entries from the Dialogue with Persons section made me aware of the vital role played by my wife as friend and nurse in the midst of many difficult episodes. As I reflected on my writing, I was reminded of her constant support during the exhausting aftereffects of the chemotherapy and the never-ending healing process. She never complained, always acted appropriately, and was consistently present in whatever way was called for at the time. I was also made aware of resources such as friends who appeared, lessons I learned working at the counseling center, strength from outside reading, and times of prayer. Thankfully, reading my entries did not allow me to forget these important factors in my recovery. Just as importantly, the method also helped me access my thoughts and feelings and get them onto paper, shedding light on changes and judgments that were called for in my own life. It helped me see what was really important in my life--it prompted me to change my work schedule and take a long-postponed vacation.
+                For years I sought a quick and easy way out of my imposed dilemma. Deep inside this place, shame ruled. The closet kept it all locked in place. In the light of day, I followed the game plan, played nice, got the job done and made happy. But by night, it was a different matter. I drank, smoked pot, and practiced promiscuous sex to keep my homosexuality from ever seeing the light of day. At night, when I had my life back, I was the true me, the Mr. Hyde to Dr. Jekel.
                 </p>
 
                 <p>
-                  I was then medically tracked for nine years by my hospital and clinic, and was eventually warned about evidence of the beginnings of Prostate Cancer in 1998. Again the Intensive Journal process kept me aware of medical and emotional behavior patterns, and I now see how, in the words of Dr. Progoff, it helps in "reminding us of all that we have survived, which in turn gives us the strength to cope with what is most recently popping up in our lives." Fortunately, a really fine urologist eventually operated and removed the prostate that same year. Thanks in large part to the Intensive Journal method, I now have the ability to listen with a different kind of ear to those confronted with life-threatening situations.
+              This went on for years, without reflection, without examination. And, then, I got lucky, before time had played me or itself out. A gay friend, who swore by it, suggested I try the Intensive Journal® method. What the heck, I thought, give it a shot. I could tell my sad story, the injustices, the drama, justify my hurt, maybe even find a solution or two to better live my daylight existence. What could I lose?
                 </p>
 
                 <p>
-                  As the years go on, I see more and more the quality and comprehensiveness of the method, the depth and grasp Dr. Progoff had of the human condition, and the impressive way he put together a structure that simultaneously preserves necessary internal discipline and enhances the freedoms so pivotal to human health at all levels. As the account above indicates, the Intensive Journal method has been a great personal help. Moreover, I've been fortunate to witness over several decades the benefits the method brings to others.
+                But, as I began writing in the Journal, something else happened, something odd. Everything began to shift. I felt at first, and to my surprise, that maybe I wasn’t a monster, a cad, a duplicitous s.o.b. after all. I didn’t tell that to anyone at first, it probably wasn’t true and it certainly didn’t fit my previous profile. But I felt it anyway. I began to feel through the pages of the Journal that there was some goodness in me. There was now and there always had been a basic goodness to my life.
+                </p>
+
+                <p>
+                The Intensive Journal process began to open doors to another side of life for me. The closet door so firmly held closed by shame slowly opened, became less important, the doorway itself an opportunity for growth. Through the reflective writing process about my life, I found out where that shame had come from and how it had driven me. I found out how sometimes I avoided choices, stepped around issues, failed to address consequences, looked for the easy way out, and made up fabrications and fictions to keep from looking inward. I found out the separate compartments of my life weren’t separate after all, how each was related, impacted the others, and cried out for connection. While it might sound altogether hokey and pablum sweet, I found out my life could have authenticity and hold integrity.
+                </p>
+
+                <p>
+                  The Intensive Journal method provided me with the means to this self discovery. It does so through a series of different writing exercises, or sections, or, I could even say, “compartments”. But in this case, the compartments are not meant to be kept separate, they lead and call out to each other, they are meant to connect. For instance, an event taking place on the surface of your life, finds connection with the world of dreams, which in turn continues and flows to a place of inner process or a dialogue with others or society. For myself, working in the Dialogue with Body section of the Journal has been so incredibly rich. By following the writing elicited there, I have allowed and listened to my own body’s responses and the wisdom as it rises to the surface bringing wholeness and integration.
+                </p>
+
+                <p>
+                  Working in the Journal, without judgment or analysis, requires both honesty and reflection. The Intensive Journal workshop will allow you the time to participate in the Journal's exercises in a supportive setting with others engaged in the same work and in complete privacy. As a workshop participant, you will enter into your process of discovery, at your own pace, finding your own path to wholeness. If you are looking for a way to work with your feelings and experiences in a productive and insightful process about all the areas which comprise your unique life, including your sexuality, then I urge you to consider attending an Intensive Journal workshop.
                 </p>
 
 
-                <hr class="trademark-line">
+                  <hr class="trademark-line">
+                  <p>
+                    * LGBT refers to the lesbian, gay, bisexual and transgender community. 
+                  </p>
                 <p>
                   <em>"Intensive Journal" is a registered trademark of Jon Progoff and licensed to Dialogue House. © Copyright 2019. Reprinted with permission of the author.</em>
                 </p>
