--- a/life-stories.html
+++ b/life-stories.html
@@ -248,7 +248,7 @@
     </a><em>by Pam Rivers</em>
                     </li>
                     <li>
-                        <a href="lifestories/christines.html">Grieving for My Sisters,
+                        <a href="lifestories/christine.html">Grieving for My Sisters,
     </a><em>by Christine Lang</em>
                     </li>
                     <li>
