--- a/articles.html
+++ b/articles.html
@@ -174,10 +174,10 @@ The Write to Fulfilling Life: An Interview with Ira Progoff  </a>by Krysta Gibso
                   <h6 class="u-margin-top-small-2">Wellness:</h6>
                   <ul class="article-link">
                     <li>
-                        <a href="articles/path-article.html">Finding the Message of Illness    </a>by Ira Progoff,<em>Spiritual Aspects of the Healing Arts,</em> Ed. Doris Kunz, Wheaton: The Theosophical Publishing House. 1985.
+                        <a href="articles/ira-message.html">Finding the Message of Illness    </a>by Ira Progoff,<em>Spiritual Aspects of the Healing Arts,</em> Ed. Doris Kunz, Wheaton: The Theosophical Publishing House. 1985.
                     </li>
                     <li>
-                        <a href="articles/path-article.html">
+                        <a href="articles/ira-growth.html">
  The Psychology of Personal Growth </a> by Ira Progoff, <em>Atlantic Monthly,</em>)July 1961, pp. 102-104.
                     </li>
 
@@ -186,16 +186,16 @@ The Write to Fulfilling Life: An Interview with Ira Progoff  </a>by Krysta Gibso
                   <h6 class="u-margin-top-small-2">Ministry:</h6>
                   <ul class="article-link">
                     <li>
-                        <a href="articles/path-article.html">
+                        <a href="articles/ministry-tool.html">
 The Intensive Journal Method: a Tool for Ministry    </a> by Rev. James D. Miller, D. Min., based upon Doctor of Ministry Thesis from Lancaster Theological Seminary, 1979.
                     </li>
                     <li>
-                        <a href="articles/path-article.html">
+                        <a href="articles/blueprint.html">
 
                           Blueprint for a Spirituality of Experience   </a> by Rev. John McMurry, S.S., S.T.L., Ph.D., <em>The Priest,</em> November 1998, Volume 44, Issue 11.
                     </li>
                     <li>
-                        <a href="articles/path-article.html">
+                        <a href="articles/threshold.html">
 
 
   At the Threshold of a Christian Spirituality   </a>by Rev. John McMurry, S.S., S.T.L., Ph.D.,<em> Review for Religious,</em>  July/August 1991, Volume 50, Issue 4, pp. 500-508.
