Books and audio

--- a/books-audio.html
+++ b/books-audio.html
@@ -134,61 +134,97 @@
     </div>
 
             <div class="col-3-of-3">
-                <section class="section-about">
-                  <div class="section-about-header">
-                    <h5 class="heading-five">About us</h5>
-                    <h1 class="heading-one">Ira Progoff</h1>
+                <section class="section-inside">
+                  <div class="section-inside-header">
+                    <h5 class="heading-five">Learn more &mdash; Books and Audio</h5>
+                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
+
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+
+                      <li><a href="books-overview.html">Overview</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="books.html">Books</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="audio.html">Audio CDs</a></li>
+
+                    </ul>
+                    <hr class="work-hr">
                   </div>
-                  <div class="section-about-picture">
 
                   </div>
+                  <div class="section-inside-picture workshop-picture">
+                  </div>
 
-                <div class="section-about-content">
-                  <h1>About Ira Progoff</h1>
-
+                <div class="section-inside-content">
+                  <h1>Entrance Meditation™ Series  (Three meditations: $40)</h1>
+                  <!-- <h6>A Different Form of Meditation</h6> -->
                   <p>
-                    Since the 1950's, Dr. Progoff has devoted his life to the exploration of new ways to encourage creativity and to enhance individual growth.
-                     He is a leading authority on C.G. Jung, depth psychology and transpersonal psychology as well as journal writing.
+                    The Entrance Meditation series, rich in metaphors from nature and wisdom figures, takes us on an inward path that is gentle, profound, and free from religious doctrine.  Each of the three audios consists of eight separate meditations, which are self-contained units and may be used individually, or one can follow the sequence of each audio as the theme is developed through a full cycle of experiences.  They take you inward and then outward after the meditative experience.  For more information about the Entrance Meditation technique, including applications and a sample meditation,<a href="#" class="page-link">click here.</a>
                   </p>
 
-                  <p>
-                    Dr. Progoff completed his doctoral dissertation on the psychology of C.G. Jung from the New School for Social Research in New York City.
-                    His thesis was published in 1953 as Jung's Psychology and Its Social Meaning.
-                    After reading Dr. Progoff's dissertation, Dr. Jung invited him to study with him in Switzerland as a Bollingen fellow. He studied with Dr. Jung in 1952, 1953 and 1955.
-                     In addition, Dr. Progoff gave several Eranos lectures in Switzerland during the 1960s, where he presented his theories of holistic depth psychology.
-                  </p>
 
-                  <p>
-                    As a practicing depth psychologist and Director of the Institute for Research in Depth Psychology at Drew University from 1959 to 1971, Dr. Progoff conducted research on the dynamic process by which individuals develop more fulfilling lives.
-                     As a psychotherapist, he found that the clients who wrote in some form of a journal were able to work through issues more rapidly.
-                      Through this research, he then developed and refined the Intensive Journal Method in the mid-1960's and 1970's to provide a way to mirror the processes by which people become dynamic and develop themselves.
-                  </p>
+                <div class="row">
+                  <div class="col-1-of-2">
+                    <table class="books-table">
+                      <tr>
+                        <th>Description</th>
+                      </tr>
+                      <tr>
+                        <td>Sitting in stillness, we enter our own cathedral, our sanctuary of quiet and privacy. Moving downward into our well, the inner depths of our self, we explore inner experiences, images and feelings. Our jumbled life experiences, the muddy waters of our lives, settle and become clear in the silence. New truths and symbols present themselves. From deep in our well, we are led into the underground stream, the timeless waters of eternity, to feel the presence of others.</td>
+                      </tr>
+<!--
+                      <tr>
+                      <th>Code</th>
+                      </tr>
+                      <tr>
+                        <td>A-101</td>
+                      </tr>
+                      <tr>
+                        <th>Price</th>
+                      </tr>
+                      <tr>
+                        <td>$15.00</td>
+                      </tr> -->
 
-                  <p>
-                    Dr. Progoff conducted numerous Intensive Journal workshops throughout the United States and Canada.
-                    Through this process, he was able to develop the Method further.
-                    In 1975, he completed the award-winning book, At a Journal Workshop, which articulates both his theory of personal and spiritual growth and how to use the Intensive Journal Method.
-                     In 1980, Dr. Progoff completed The Practice of Process Meditation which set forth the principles and exercises for the Meaning (Process MeditationTM) Dimension of the Intensive Journal workbook.
-                     (In 1992, Dr. Progoff issued a revised edition of At a Journal Workshop which combines in one volume the original edition and The Practice of Process Meditation.)
-                  </p>
+                      <tr>
+                      <th>Review</th>
+                      </tr>
+                      <tr>
+                        <td><em>" ...as beautiful as poetry, as inspiring as mystical revelation, as practical as therapy."</em><br>
+                        - New Realities Magazine</td>
+                      </tr>
 
-                  <p>
-                    As interest continued to grow in the 1970's, Dr. Progoff formed the Progoff (National) Intensive Journal Program to make workshops available to the public through its trained and certified leaders.
-                     Over 250 workshops are conducted annually.
-                  </p>
+                    </table>
+                  </div>
+                  <div class="col-1-of-2">
 
-                  <p>
-                    To further his goal of providing a tool for self-development, Dr. Progoff has made workshops available at prisons, social service agencies and health care facilities.
-                    It is part of his commitment and dedication to providing a tool for individuals of limited economic means to develop themselves.
-                  </p>
+                    <img src="img/cd/wellcathedral.jpg" alt="" class="cd-img">
 
-                  <p>
-                    Regrettably, Dr. Progoff passed away in January of 1998 after suffering from an advanced form of a rare neurological illness, Progressive Supranuclear Palsy (PSP).
-                    This disease affects the central nervous system and greatly weakens an individual's body.
-                    Dialogue House is committed to carrying on the work of Dr. Ira Progoff based on his research and writings.
-                  </p>
+                    <div class="row">
+                      <div class="col-1-of-2">
+                        <table class="books-table">
+                          <tr>
+                          <th>Code</th>
+                          <td>A-101</td>
+                          </tr>
+                        </table>
+
+                      </div>
+                      <div class="col-1-of-2">
+                        <table class="books-table">
+                          <tr>
+                          <th>Code</th>
+                          <td>A-101</td>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+
+                  </div>
                 </div>
-
+                </div>
 
                 </section>
 
@@ -262,10 +298,7 @@
         </footer>
             </div>
 
-
-
         </div>
-
 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
