--- a/navigation.html
+++ b/navigation.html
@@ -59,7 +59,7 @@
                         </ul>
                     </li>
                     <li class="navigation__item">
-                        <span class="navigation__link">Specialized Audicences</span>
+                        <span class="navigation__link">Specialized Audiences</span>
                         <ul class="navigation__item--nested">
                             <li><a href="#">Addiction Recovery</a></li>
                             <li><a href="#">Coaching</a></li>
@@ -89,7 +89,7 @@
                             <li><a href="articles.html">Articles</a></li>
                             <li><a href="life-stories.html">Life Histories</a></li>
                             <li><a href="#">Newsletters</a></li>
-                            <li><a href="#">Boosk and Audio</a></li>
+                            <li><a href="books-audio.html">Boosk and Audio</a></li>
 
                         </ul>
                     </li>
