--- a/books-audio.html
+++ b/books-audio.html
@@ -147,7 +147,9 @@
                       <span class="vert">&vert;</span>
                       <li><a href="books.html">Books</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="audio.html">Audio CDs</a></li>
+                      <li><a href="books-audio.html">Audio CDs</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="combination.html">Combination*</a></li>
 
                     </ul>
                     <hr class="work-hr">
