--- a/jobresearch.html
+++ b/jobresearch.html
@@ -155,57 +155,61 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Learn more &mdash; Continuing Education &ndash; Nursing</h5>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Research</h5>
                     <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
-                      <hr class="mod-hr">
+                      <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="nursing.html">Learning Objectives</a></li>
+                      <li><a href="jobtraining.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-benefits.html">Benefits</a></li>
+                      <li><a href="joboutcomes.html">Outcomes</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-credits.html">Credits</a></li>
+                      <li><a href="jobbenefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-endorse.html">Endorsements</a></li>
+                      <li><a href="jobresearch.html">Research</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-article.html">Articles</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="nursing-workshop.html">Organize a Workshop  </a></li>
+                      <li><a href="jobarticles.html">Articles</a></li>
 
                     </ul>
-                    <hr class="mod-hr">
+                    <hr class="work-hr">
                   </div>
 
                   </div>
-                  <div class="section-inside-picture nursingcredits-picture">
+                  <div class="section-inside-picture workshop-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Continuing Education Credits (Contact Hours)</h1>
+                  <h1>Research Studies</h1>
 
-                  <table class="table-credits">
-                    <tr>
-                      <th>Length (Hours)</th>
-                      <th>California</th>
+                  <p>
+                    Dialogue House is seeking to participate in independent research studies to determine the effectiveness of the Intensive Journal method in helping participants in a job training program. We are especially interested in measuring the short-term impact of using our method over a six to nine month period upon behaviors and attitudes of trainees.
 
-                    </tr>
 
-                    <tr>
-                      <td>8</td>
-                      <td>8.8</td>
-                    </tr>
-                    <tr>
-                      <td>10</td>
-                      <td>11.0</td>
-                    </tr>
-                    <tr>
-                      <td>12</td>
-                      <td>13.2</td>
-                    </tr>
+                  <p>
+                Please contact Jon Progoff at 800-221-5844 or email: info@intensivejournal.org for more information if you would like to help us organize a study.
+                  </p>
 
-                  </table>
+                  <h1>
+                    Former Studies
+                  </h1>
+
+                  <h6>
+                    New York State Department of Labor Study:
+                  </h6>
+
+                  <p>
+                    New York State Department of Labor Job-Training Program: Applying the Intensive Journal Method by S.A. Sealy and T.F. Duffy. Abridged Version.
+                  </p>
+
+                  <p>
+                    Dialogue House participated in an eighteen month on-the-job training program in New York City to recruit nearly 300 entry-level workers for a geriatric residence. The trainees were largely classified as “disadvantaged”– welfare recipients and chronic unemployed– many with low levels of education. In addition to on-the-job training and remedial education, trainees participated in ongoing Intensive Journal workshops.
+                  </p>
+
+                  <p>
+                    The program was quite successful: 249 of the 286 people in training completed the program and were employed at the geriatric residence. After one year, 222 out of 249 who completed the training were still employed or had taken another job. Adding the Intensive Journal program to the traditional on-the-job training and remedial education programs was credited with significantly contributing to the above-average performance rates.
+                  </p>
 
                 </div>
 
