--- a/articles.html
+++ b/articles.html
@@ -90,8 +90,17 @@
                     <li class="navigation__item">
                         <span class="navigation__link">Specialized Audiences</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">Addiction Recovery</a></li>
-                            <li><a href="#">Coaching</a></li>
+                            <li>
+                              <a href="#">Social Service</a>
+                              <ul class="navigation__item--nested--nested">
+                                <li class="nested-list"><a href="resolution.html">Conflict Resolution</a></li>
+                                <li class="nested-list"><a href="justice.html">Criminal Justice</a></li>
+                                <li class="nested-list"><a href="jobtraining.html">Job Training</a></li>
+                              </ul>
+                            </li>
+
+
+                            <!-- <li><a href="#">Coaching</a></li>
                             <li><a href="#">Criminal Justice</a></li>
                             <li><a href="#">Job Training</a></li>
                             <li><a href="#">Ministry</a></li>
@@ -101,7 +110,7 @@
                             <li><a href="#">Teaching</a></li>
                             <li><a href="#">Therapy and Nursing</a></li>
                             <li><a href="#">Wellness</a></li>
-                            <li><a href="#">Writers</a></li>
+                            <li><a href="#">Writers</a></li> -->
                         </ul>
                     </li>
                     <li class="navigation__item">
@@ -188,7 +197,7 @@ The Write to Fulfilling Life: An Interview with Ira Progoff  </a>by Krysta Gibso
                     </li>
                     <li>
                         <a href="articles/ira-growth.html">
- The Psychology of Personal Growth </a> by Ira Progoff, <em>Atlantic Monthly,</em>)July 1961, pp. 102-104.
+ The Psychology of Personal Growth </a> by Ira Progoff, <em> Atlantic Monthly,</em> July 1961, pp. 102-104.
                     </li>
 
                   </ul>
@@ -230,22 +239,22 @@ The Intensive Journal Method: a Tool for Ministry    </a> by Rev. James D. Mille
                   <ul class="article-link">
                     <li>
                         <a href="articles/no-longer-theory.html">
-No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <em>Journal of Correctional Education, </em>
+No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
 September 2004, Volume 55, Issue 3, pp. 225-235.
                     </li>
                     <li>
                         <a href="articles/behind-walls.html">
-Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, reprinted from <em> Fellowship in Prayer,</em>
+Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, <br>reprinted from <em> Fellowship in Prayer,</em>
 October 1986, Volume 37, Number 5, pp. 43-46.
                     </li>
                     <li>
                         <a href="articles/job-training.html">
                           The New York State Department of Labor Job-Training Program:
-  Applying the Progoff Intensive Journal Method </a> <em> by Shirley Sealy and Tom Duffy </em> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
+  Applying the Progoff Intensive Journal Method </a><br> <em> by Shirley Sealy and Tom Duffy </em><br> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
                     </li>
                     <li>
                         <a href="articles/target-prison.html">
-                      The Intensive Journal Target Prison Program </a> <em> by Jon Progoff </em> A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
+                      The Intensive Journal Target Prison Program </a> <br><em> by Jon Progoff </em> <br>A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
                     </li>
 
                   </ul>
