--- a/jobarticles.html
+++ b/jobarticles.html
@@ -155,57 +155,61 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Learn more &mdash; Continuing Education &ndash; Nursing</h5>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Articles</h5>
                     <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
-                      <hr class="mod-hr">
+                      <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="nursing.html">Learning Objectives</a></li>
+                      <li><a href="jobtraining.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-benefits.html">Benefits</a></li>
+                      <li><a href="joboutcomes.html">Outcomes</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-credits.html">Credits</a></li>
+                      <li><a href="jobbenefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-endorse.html">Endorsements</a></li>
+                      <li><a href="jobresearch.html">Research</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-article.html">Articles</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="nursing-workshop.html">Organize a Workshop  </a></li>
+                      <li><a href="jobarticles.html">Articles</a></li>
 
                     </ul>
-                    <hr class="mod-hr">
+                    <hr class="work-hr">
                   </div>
 
                   </div>
-                  <div class="section-inside-picture nursingcredits-picture">
+                  <div class="section-inside-picture workshop-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Continuing Education Credits (Contact Hours)</h1>
+                  <h1>Articles</h1>
 
-                  <table class="table-credits">
-                    <tr>
-                      <th>Length (Hours)</th>
-                      <th>California</th>
+                  <ul class="article-link">
+                    <li>
+                        <a href="articles/no-longer-theory.html">
+No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
+September 2004, Volume 55, Issue 3, pp. 225-235.
+                    </li>
+                    <li>
+                        <a href="articles/behind-walls.html">
+Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, <br>reprinted from <em> Fellowship in Prayer,</em>
+October 1986, Volume 37, Number 5, pp. 43-46.
+                    </li>
+                    <li>
+                        <a href="articles/job-training.html">
+                          The New York State Department of Labor Job-Training Program:
+  Applying the Progoff Intensive Journal Method </a><br> <em> by Shirley Sealy and Tom Duffy </em><br> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
+                    </li>
+                    <li>
+                        <a href="#">
+                    Rehabilitation Strategies for the Criminal Justice System,</a> <br><em> by Jessica Haas </em> <br><em>Progoff</em>&trade; Criminal Justice Newsletter, Fall 2005, Vol 1, Issue 1, p1.
+                    </li>
+                    <li>
+                        <a href="articles/target-prison.html">
+                      The Intensive Journal Target Prison Program </a> <br><em> by Jon Progoff </em> <br>A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
+                    </li>
+                  </ul>
 
-                    </tr>
 
-                    <tr>
-                      <td>8</td>
-                      <td>8.8</td>
-                    </tr>
-                    <tr>
-                      <td>10</td>
-                      <td>11.0</td>
-                    </tr>
-                    <tr>
-                      <td>12</td>
-                      <td>13.2</td>
-                    </tr>
-
-                  </table>
 
                 </div>
 
