--- a/jobtraining.html
+++ b/jobtraining.html
@@ -155,57 +155,81 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Learn more &mdash; Continuing Education &ndash; Nursing</h5>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Overview</h5>
                     <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
-                      <hr class="mod-hr">
+                      <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="nursing.html">Learning Objectives</a></li>
+                      <li><a href="jobtraining.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-benefits.html">Benefits</a></li>
+                      <li><a href="joboutcomes.html">Outcomes</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-credits.html">Credits</a></li>
+                      <li><a href="jobbenefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-endorse.html">Endorsements</a></li>
+                      <li><a href="jobresearch.html">Research</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-article.html">Articles</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="nursing-workshop.html">Organize a Workshop  </a></li>
+                      <li><a href="jobarticles.html">Articles</a></li>
 
                     </ul>
-                    <hr class="mod-hr">
+                    <hr class="work-hr">
                   </div>
 
                   </div>
-                  <div class="section-inside-picture nursingcredits-picture">
+                  <div class="section-inside-picture workshop-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Continuing Education Credits (Contact Hours)</h1>
+                  <h1>Overview</h1>
 
-                  <table class="table-credits">
-                    <tr>
-                      <th>Length (Hours)</th>
-                      <th>California</th>
+                  <p>
+                The Progoff methodology can be a valuable complement to an entry level job training program.
+                  </p>
+                  <p>
+                Our program has helped trainees deal with the multitude of personal issues that impact their behavior, attitudes and performance in the training program. Trainees who develop a positive and constructive attitude generate higher rates of completion from the training program. They are more employable, exhibit higher job retention rates and obtain higher rates of promotion.
+                  </p>
+                  <p>
+            Trainees attend our program while they are enrolled in training to obtain technical skills or basic life skills for entering the job market. Requiring only a modest level of education, our method employs minimal terminology and helps individuals move quickly into their own process. Our program has built-in safeguards of privacy so that participants feel safe to be honest with themselves. These features are especially important for participants who are often not familiar with self-development programs.
+                  </p>
 
-                    </tr>
+                  <div class="quotes">
+                    <h6>Dr. Progoff’s Strategy For Job Trainees</h6>
+                    <blockquote>
+                "The ultimate poverty is a person’s lack of feeling for the reality of his own inner being. People in poverty situations tend to feel they are powerless to change their circumstances... The answer to poverty lies in making it tangibly possible for a person to experience the fact that he or she is a person... When the trainees reread what they have written in their Journals, the trainees become aware of their capacities, and realize that they are indeed persons and that they need live in poverty no longer."
+                </blockquote>
 
-                    <tr>
-                      <td>8</td>
-                      <td>8.8</td>
-                    </tr>
-                    <tr>
-                      <td>10</td>
-                      <td>11.0</td>
-                    </tr>
-                    <tr>
-                      <td>12</td>
-                      <td>13.2</td>
-                    </tr>
+                    <p class="normal-font u-center-text u-margin-top-small-1">Source: The New York State Department of Labor Job-Training Program: Applying the Intensive Journal Method</p>
+                      </div>
 
-                  </table>
+                  <p>
+                    The method is a <strong> powerful psychological tool</strong> that can help individuals transform themselves to make major strides in their self-development. The method helps a person connect with their inner core, getting to know who they really are at a deep inner level.
+                  </p>
+
+                  <p>
+                    The Intensive Journal method uses<strong> minimal terminology</strong>; the goal is to help trainees work with the different areas of their lives in a direct and neutral manner. People with minimal education or interest in self-development methods can benefit greatly. They are exploring their lives, a subject of great interest, and learning about themselves in a non-threatening way,. If English is their second language, trainees can write in their native language to facilitate their use of the process.
+                  </p>
+
+                  <p>
+                    Our program<strong> functions well within the structure of an ongoing job training program</strong> . It is designed to be used over time, creating cumulative benefits. As participants read back their entries, additional thoughts and feelings may stir inside themselves, leading to additional entries which builds the impact. Progoff calls this technique the Journal Feedback process and it is a key element of the process.
+                  </p>
+
+                  <p>
+                    The<strong>  individual sections</strong> or <strong>exercises</strong> within the Intensive Journal workbook provide a unique way of working with different areas of their lives. By way of example, trainees learn how to gain awareness about periods of their lives as they revisit prior experiences in a non-threatening way. With the distance of time, they are able to gain new perspectives, developing a greater sense of the continuity and direction of their lives, and learn lessons with the distance of time. By entering into a dialogue with people they know well (e.g. family members), they can deepen their relationship with that person, working through emotional issues that may have disrupted their lives. Healing and awareness become possible. They learn how to use the method to review major themes in their lives, realizing how they engage in patterns of behavior and its implications. Our method is non-judgmental, conducted in total privacy so that they feel safe to be honest with themselves.
+                  </p>
+
+                  <p>
+                    Participants become <strong> immersed in their own process</strong> . They are dealing with their own lives, finding answers for themselves. The group bonds at a deeper level; they realize that each of them has issues to address and challenges to overcome; they realize that they are not alone. They are working privately but in unison on the same overall issue– developing their lives generally and for the purpose of succeeding in the training program.
+                  </p>
+
+                  <p>
+                    Progoff believed in the <strong>unlimited potential</strong> of persons to develop themselves. Therefore, the focus is on helping people connect to their inner capacities, realize their uniqueness and purpose in life and develop a foundation from which to move forward. It is an empowering and uplifting process, designed to help people grow, bypassing and moving beyond their preconceived ways of thinking.
+                  </p>
+
+                  <p>
+                    The Intensive Journal method has a <strong>lasting impact</strong> upon participants. They are finding answers for themselves at a deep level that they know are right and true for them. Trainees not only produced high rates of success in the training program but exhibited high rates of job retention and advancement after they have graduated. Accordingly, the Intensive Journal method is extremely cost-effective by increasing the success rates in the training program.
+                  </p>
+
 
                 </div>
 
