--- a/justice.html
+++ b/justice.html
@@ -155,57 +155,89 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Learn more &mdash; Continuing Education &ndash; Nursing</h5>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Criminal Justice &mdash; Overview</h5>
                     <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
-                      <hr class="mod-hr">
+                      <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="nursing.html">Learning Objectives</a></li>
+                      <li><a href="justice.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-benefits.html">Benefits</a></li>
+                      <li><a href="rehabilitation.html">Rehabilitation Programs</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-credits.html">Credits</a></li>
+                      <li><a href="researchstudies.html"> Research Studies</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-endorse.html">Endorsements</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="nursing-article.html">Articles</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="nursing-workshop.html">Organize a Workshop  </a></li>
+                      <li><a href="j-articles.html">Articles</a></li>
+                      <!-- <span class="vert">&vert;</span>
+                      <li><a href="j-newsletters.html">Newsletters</a></li> -->
 
                     </ul>
-                    <hr class="mod-hr">
+                    <hr class="work-hr">
                   </div>
 
                   </div>
-                  <div class="section-inside-picture nursingcredits-picture">
+                  <div class="section-inside-picture workshop-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Continuing Education Credits (Contact Hours)</h1>
+                  <h1>Overview</h1>
 
-                  <table class="table-credits">
-                    <tr>
-                      <th>Length (Hours)</th>
-                      <th>California</th>
+                  <p>
+                The Intensive Journal method can transform the lives of offenders in a fundamental and permanent way in a cost-effective manner. We have conducted workshops throughout the criminal justice system for both men and women and at minimum and maximum security facilities.
+                  </p>
+                  <p>
+                Our program can help offenders in a number of ways. In essence, it helps participants connect at a deep inner level with their true self and more fully realize their human potential and value as a person. They give recognition to their feelings, coming to terms with painful experiences about which they were in denial, and realizing how their attitudes and behavior are impacting the status of their lives.
+                  </p>
+                  <p>
+            As a result, it is not uncommon to witness sizable changes in behavior. Offenders treat other inmates with greater respect; they see them as persons who are similarly living with a painful past. Prison officials find that offenders treat them with greater respect. Dr. Harvey Shrum reports that they need less depression medication. We see these changes even with offenders who have life-time prison sentences.
+                  </p>
 
-                    </tr>
+                  <p>
+                    Why does the Progoff methodology help offenders?
+                  </p>
 
-                    <tr>
-                      <td>8</td>
-                      <td>8.8</td>
-                    </tr>
-                    <tr>
-                      <td>10</td>
-                      <td>11.0</td>
-                    </tr>
-                    <tr>
-                      <td>12</td>
-                      <td>13.2</td>
-                    </tr>
+                  <ul>
+                    <li>
+                      The method is a <strong>powerful psychological tool</strong> that can help people of different backgrounds make major strides in their self-development. Therefore, offenders who take the process seriously can similarly benefit from participating in an excellent program.
+                    </li>
+                    <li>
+                      The Intensive Journal method employs<strong> minimal terminology</strong>; participants with a low level of education or interest in self-development programs can benefit.
+                    </li>
+                    <li>
+                      Offenders become <strong>immersed in their own process</strong>. The process captivates them - they are dealing with their own lives, finding answers for themselves. The exercises bypass preconceived ways of thinking to help them focus inward on themselves which is of great interest.
+                    </li>
+                    <div class="quotes">
 
-                  </table>
+                      <blockquote>
+                "I observed how quiet it was. The journal had gripped not only me: everyone was lost in the adventure toward self...Something had been opened in each of our lives."
+                  </blockquote>
+
+                      <p class="normal-font u-center-text u-margin-top-small-1">Charles H. Evans, II, Inmate published in Fellowship in Prayer,
+  "Awakening Behind the Walls in an Intensive Journal Workshop, "
+  October, 1986, pp. 43-46.</p>
+                        </div>
+                  </ul>
+
+
+
+                  <p>
+                  Progoff believes that fundamental change takes place when a person works in a deep inner level using the Intensive Journal exercises.
+                  </p>
+
+
+                  <div class="quotes">
+
+                    <blockquote>
+          "When our attention is focused at the depth of our being in the context of the wholeness of our life, resources for a profound knowledge of life become accessible to us."
+                </blockquote>
+
+                      </div>
+
+                  <p>
+                    The Intensive Journal workshop becomes a life changing experience.
+                  </p>
+
 
                 </div>
 
