Social Services complete

--- a/rehabilitation.html
+++ b/rehabilitation.html
@@ -155,22 +155,22 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Articles</h5>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Criminal Justice &mdash; Rehabilitation</h5>
                     <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="jobtraining.html">Overview</a></li>
+                      <li><a href="justice.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="joboutcomes.html">Outcomes</a></li>
+                      <li><a href="rehabilitation.html">Rehabilitation Programs</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobbenefits.html">Benefits</a></li>
+                      <li><a href="researchstudies.html"> Research Studies</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobresearch.html">Research</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="jobarticles.html">Articles</a></li>
+                      <li><a href="j-articles.html">Articles</a></li>
+                      <!-- <span class="vert">&vert;</span>
+                      <li><a href="j-newsletters.html">Newsletters</a></li> -->
 
                     </ul>
                     <hr class="work-hr">
@@ -181,39 +181,76 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Articles</h1>
+                  <h1>Rehabilitation Programs</h1>
 
-                  <ul class="article-link">
+                  <p>
+                    Some of the many benefits that offenders receive from the Intensive Journal method include:
+                  </p>
+
+                  <h6>
+                    Fostering Self-Improvement
+                  </h6>
+
+                  <ul>
                     <li>
-                        <a href="articles/no-longer-theory.html">
-No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
-September 2004, Volume 55, Issue 3, pp. 225-235.
+                      By connecting with their unique life experiences, offenders are able to access and develop their inner strengths and capacities, and gain life-changing insights and perspectives. The exercises help offenders acknowledge the existence of painful experiences, and deal with them. Rather than clouding their mind, they can become more focused and can begin to look forward in a more constructive way.
                     </li>
                     <li>
-                        <a href="articles/behind-walls.html">
-Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, <br>reprinted from <em> Fellowship in Prayer,</em>
-October 1986, Volume 37, Number 5, pp. 43-46.
-                    </li>
-                    <li>
-                        <a href="articles/job-training.html">
-                          The New York State Department of Labor Job-Training Program:
-  Applying the Progoff Intensive Journal Method </a><br> <em> by Shirley Sealy and Tom Duffy </em><br> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
-                    </li>
-                    <li>
-                        <a href="#">
-                    Rehabilitation Strategies for the Criminal Justice System,</a> <br><em> by Jessica Haas </em> <br><em>Progoff</em>&trade; Criminal Justice Newsletter, Fall 2005, Vol 1, Issue 1, p1.
-                    </li>
-                    <li>
-                        <a href="articles/target-prison.html">
-                      The Intensive Journal Target Prison Program </a> <br><em> by Jon Progoff </em> <br>A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
+                      Clients move from a state of denial and avoidance of painful feelings and experiences to greater recognition and acceptance. They learn to trust their own inner process and are better able to address powerful issues that previously resulted in anger and frustration.
                     </li>
                   </ul>
 
 
-                  <p><br>
-                    Articles pertaining to the use of the Intensive Journal method with populations in rehabilitation are found in the criminal justice section.
-                  </p>
 
+                <h6>
+                  Developing Vocational Interests and Skills
+                </h6>
+
+                <ul>
+                  <li>
+                    Adopting more socially acceptable behavior and attitudes allows clients to realize their potential. They begin to see themselves learning a vocation.
+                  </li>
+                </ul>
+
+                <h6>
+                  Changing Attitudes and Behavior Reduces Recidivism
+                </h6>
+
+                <ul>
+                  <li>
+                    The benefits of changing attitudes and behavior include reducing recidivism and
+disciplinary problems, becoming less aggressive, while developing patience and maturity.
+                  </li>
+                </ul>
+
+                <h6>
+                  Increasing Tolerance
+                </h6>
+
+<ul>
+  <li>
+    Offenders realize that storing hatred towards people of different racial or ethnic
+backgrounds or sexual orientations is detrimental to their own development. Coming to terms with that anger and becoming more tolerant enhances offenders' interpersonal skills.
+  </li>
+</ul>
+
+<h6>
+  Recovering From Substance Abuse Addictions
+</h6>
+<ul>
+  <li>
+     Working through underlying issues that contribute to substance abuse problems leads to more effective and permanent recovery. The Progoff methodology can be a valuable tool to complement substance abuse programs.
+  </li>
+</ul>
+
+<h6>
+  Improving Writing and Communication Skills
+</h6>
+<ul>
+  <li>
+     Clients become less inhibited about recording or expressing their experiences and feelings, resulting in enhanced interpersonal skills.
+  </li>
+</ul>
 
 
                 </div>
