--- a/researchstudies.html
+++ b/researchstudies.html
@@ -155,22 +155,22 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Articles</h5>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Criminal Justice &mdash; Research Studies</h5>
                     <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="jobtraining.html">Overview</a></li>
+                      <li><a href="justice.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="joboutcomes.html">Outcomes</a></li>
+                      <li><a href="rehabilitation.html">Rehabilitation Programs</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobbenefits.html">Benefits</a></li>
+                      <li><a href="researchstudies.html"> Research Studies</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobresearch.html">Research</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="jobarticles.html">Articles</a></li>
+                      <li><a href="j-articles.html">Articles</a></li>
+                      <!-- <span class="vert">&vert;</span>
+                      <li><a href="j-newsletters.html">Newsletters</a></li> -->
 
                     </ul>
                     <hr class="work-hr">
@@ -181,38 +181,69 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Articles</h1>
+                  <h1>Research Studies</h1>
 
-                  <ul class="article-link">
-                    <li>
-                        <a href="articles/no-longer-theory.html">
-No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
-September 2004, Volume 55, Issue 3, pp. 225-235.
-                    </li>
-                    <li>
-                        <a href="articles/behind-walls.html">
-Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, <br>reprinted from <em> Fellowship in Prayer,</em>
-October 1986, Volume 37, Number 5, pp. 43-46.
-                    </li>
-                    <li>
-                        <a href="articles/job-training.html">
-                          The New York State Department of Labor Job-Training Program:
-  Applying the Progoff Intensive Journal Method </a><br> <em> by Shirley Sealy and Tom Duffy </em><br> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
-                    </li>
-                    <li>
-                        <a href="#">
-                    Rehabilitation Strategies for the Criminal Justice System,</a> <br><em> by Jessica Haas </em> <br><em>Progoff</em>&trade; Criminal Justice Newsletter, Fall 2005, Vol 1, Issue 1, p1.
-                    </li>
-                    <li>
-                        <a href="articles/target-prison.html">
-                      The Intensive Journal Target Prison Program </a> <br><em> by Jon Progoff </em> <br>A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
-                    </li>
-                  </ul>
-
-
-                  <p><br>
-                    Articles pertaining to the use of the Intensive Journal method with populations in rehabilitation are found in the criminal justice section.
+                  <p>
+                  Dialogue House is seeking to organize independent research studies to determine the  effectiveness of the Intensive Journal method in helping spur offender rehabilitation. These studies could be done with offenders who are either incarcerated or not. We are especially interested in measuring the short-term impact of using our method over a six to nine month period upon behavior and attitude of offenders.
                   </p>
+
+                  <p>
+                    Please contact Jon Progoff at 800-221-5844 or email: info@intensivejournal.org for more information if you would like to help us organize a study.
+                  </p>
+
+                  <h1>
+                    Folsom State Prison Study by Harvey Shrum, Ed.D
+                  </h1>
+
+                  <p>
+                    Dr. Harvey Shrum tracked the recidivism rate over 100 inmates who attended at least one Intensive Journal program while incarcerated at Folsom Prison. Dr. Shrum concluded:
+                  </p>
+
+                  <div class="u-margin-left-medium">
+                    <h6>
+                      Empowering Effect:
+                    </h6>
+
+                    <p>
+                      "Through [the Intensive Journal method’s] non-judgmental, non-analytical nature, it gives the writer a mirroring capability that increases the energy, power, and effectiveness of the process over time. This experience has an empowering effect upon the Intensive Journal writer."
+                    </p>
+
+                    <h6>
+                      Reduced Recidivism:
+                    </h6>
+
+                    <p>
+                      "In the ten years since its introduction at Folsom State Prison, not one inmate who had completed at least the introductory Intensive Journal workshop returned to prison."
+                    </p>
+                    <h6>
+                      Powerful Tool for Mental Health Growth:
+                    </h6>
+
+                    <p>
+                      "Without therapeutic intervention shortly after these events, they [inmates] became at greater risk for antisocial behavior, low-self-esteem, depression, low educational attainment, underemployment, substance abuse, mental illness, and suicidal ideation. The Intensive Journal program helped them to deal with their issues in a safe, supporting environment."
+                    </p>
+                    <h6>
+                      Proven Record of Offender Rehabilitation:
+                    </h6>
+
+                    <p>
+                    "The Intensive Journal method also holds great promise in rehabilitating inmates as well as preventing young people from taking the path that often leads to addictions and incarceration. It is...conducive in fostering self-improvement,...fostering/developing vocational interests, in increasing awareness and healing of health, addictions, and relationships. It...improves writing and communication skills, enhances relationships with family, and achieves breakthroughs in issues and decision-making."
+                    </p>
+
+                    <p class="u-margin-bottom-small"><strong>
+                      Source:
+                    </strong></p>
+
+                    <ul class="article-link">
+                      <li>
+                          <a href="articles/no-longer-theory.html">
+  No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
+  September 2004, Volume 55, Issue 3, pp. 225-235.
+                      </li>
+                    </ul>
+
+                  </div>
+
 
 
 
