--- a/res-benefits.html
+++ b/res-benefits.html
@@ -155,22 +155,19 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Articles</h5>
-                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
+                    <h5 class="heading-five">Specialized Audiences &mdash; Conflict Resolution</h5>
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="jobtraining.html">Overview</a></li>
+                      <li><a href="resolution.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="joboutcomes.html">Outcomes</a></li>
+                      <li><a href="res-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobbenefits.html">Benefits</a></li>
+                      <li><a href="res-endorse.html">Endorsements</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobresearch.html">Research</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="jobarticles.html">Articles</a></li>
+                      <li><a href="res-articles.html">Articles</a></li>
 
                     </ul>
                     <hr class="work-hr">
@@ -181,40 +178,76 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Articles</h1>
+                  <h1>Benefits</h1>
 
-                  <ul class="article-link">
+                  <p>
+              The Intensive Journal method provides specific techniques through our integrated system of writing exercises to help participants:
+                  </p>
+
+                  <h6>
+                    Release intense feelings in the Journal
+                  </h6>
+
+                  <ul>
                     <li>
-                        <a href="articles/no-longer-theory.html">
-No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
-September 2004, Volume 55, Issue 3, pp. 225-235.
-                    </li>
-                    <li>
-                        <a href="articles/behind-walls.html">
-Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, <br>reprinted from <em> Fellowship in Prayer,</em>
-October 1986, Volume 37, Number 5, pp. 43-46.
-                    </li>
-                    <li>
-                        <a href="articles/job-training.html">
-                          The New York State Department of Labor Job-Training Program:
-  Applying the Progoff Intensive Journal Method </a><br> <em> by Shirley Sealy and Tom Duffy </em><br> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
-                    </li>
-                    <li>
-                        <a href="#">
-                    Rehabilitation Strategies for the Criminal Justice System,</a> <br><em> by Jessica Haas </em> <br><em>Progoff</em>&trade; Criminal Justice Newsletter, Fall 2005, Vol 1, Issue 1, p1.
-                    </li>
-                    <li>
-                        <a href="articles/target-prison.html">
-                      The Intensive Journal Target Prison Program </a> <br><em> by Jon Progoff </em> <br>A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
+                      Release intense feelings of anger and hatred in the Intensive Journal workbook, not in a violent way.  One particpant stated: <em>" I killed him in my Journal with my ballpoint pen..."</em> see footnote 7.
                     </li>
                   </ul>
 
+                  <h6 class="u-margin-top-small-1">
+                    Foster bonding between participants in a group setting
+                  </h6>
+                  <ul>
+                    <li>
+                      Working privately at a deep inner level, participants connect at the underground stream, the source of collective wisdom.
+                    </li>
+                    <li>
+                      Realize the frailties and personal issues that others in the group from different ethnic /racial / religious groups face, resulting in a bonding and understanding of fellow participants.
+                    </li>
+                    <li>
+                      Change behavior and attitudes toward others after the workshop, resulting in greater harmony and meaningful coexistence. <a href="res-endorse.html">See statements by Harvey  Shrum, EdD and Marcella  Hardt</a>
+                    </li>
+                  </ul>
 
-                  <p><br>
-                    Articles pertaining to the use of the Intensive Journal method with populations in rehabilitation are found in the criminal justice section.
-                  </p>
+                  <h6 class="u-margin-top-small-1">
+                    State issues in the Journal to better articulate them to others
+                  </h6>
+                  <ul>
+                    <li>
+                      Work through issues in the Journal; gain awareness and perspectives.  Crystalize insights.
+                    </li>
+                    <li>
+                      Become more expressive and communicative;  strengthen interpersonal skills
+                    </li>
+                    <li>
+                      Convey feelings and concerns more effectively and tactfully to members of other ethnic/racial / religious groups.
+                    </li>
+                  </ul>
 
+                  <h6 class="u-margin-top-small-1">
+                    Obtain a powerful life-changing experience
+                  </h6>
+                  <ul>
+                    <li>
+                      Become immersed in connecting with your unique life experiences to connect with strengths, capacities and interests. Work through issues within the context of one's entire life to realize safer and more optimal results.
+                    </li>
 
+                    <li>
+                      View from various perspectives issues/situations that may have created anger, distrust, and resentment.  See issues from another person's perspective by walking in that person's shoes.
+                    </li>
+                  </ul>
+
+                  <h6 class="u-margin-top-small-1">
+                    Use a method with little terminology
+                  </h6>
+                  <ul>
+                    <li>
+                      Designed with minimal terminology, our methodology has enabled people with different levels of education and interest in growth programs to benefit immensely.
+                    </li>
+                    <li>
+                      Utilize a system with strong protections of privacy in the workshop and minimal requirements for writing skills.
+                    </li>
+                  </ul>
 
                 </div>
 
