--- a/res-endorse.html
+++ b/res-endorse.html
@@ -155,22 +155,19 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Articles</h5>
-                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
+                    <h5 class="heading-five">Specialized Audiences &mdash; Conflict Resolution</h5>
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="jobtraining.html">Overview</a></li>
+                      <li><a href="resolution.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="joboutcomes.html">Outcomes</a></li>
+                      <li><a href="res-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobbenefits.html">Benefits</a></li>
+                      <li><a href="res-endorse.html">Endorsements</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobresearch.html">Research</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="jobarticles.html">Articles</a></li>
+                      <li><a href="res-articles.html">Articles</a></li>
 
                     </ul>
                     <hr class="work-hr">
@@ -181,39 +178,60 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Articles</h1>
 
-                  <ul class="article-link">
-                    <li>
-                        <a href="articles/no-longer-theory.html">
-No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
-September 2004, Volume 55, Issue 3, pp. 225-235.
-                    </li>
-                    <li>
-                        <a href="articles/behind-walls.html">
-Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, <br>reprinted from <em> Fellowship in Prayer,</em>
-October 1986, Volume 37, Number 5, pp. 43-46.
-                    </li>
-                    <li>
-                        <a href="articles/job-training.html">
-                          The New York State Department of Labor Job-Training Program:
-  Applying the Progoff Intensive Journal Method </a><br> <em> by Shirley Sealy and Tom Duffy </em><br> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
-                    </li>
-                    <li>
-                        <a href="#">
-                    Rehabilitation Strategies for the Criminal Justice System,</a> <br><em> by Jessica Haas </em> <br><em>Progoff</em>&trade; Criminal Justice Newsletter, Fall 2005, Vol 1, Issue 1, p1.
-                    </li>
-                    <li>
-                        <a href="articles/target-prison.html">
-                      The Intensive Journal Target Prison Program </a> <br><em> by Jon Progoff </em> <br>A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
-                    </li>
-                  </ul>
+                <h1>Endorsements</h1>
+
+              <div class="quotes">
+                <blockquote>
+                  <strong>Overcoming Hate and Violence</strong><br>
+                  "My experiences with the Intensive Journal method have made me a far better person....there was a time when I just purely hated white people, just hated them.   A white guy did something to me once in a restaurant that hung with me for a long time.  And I wanted to kill him so bad I didn't know what to do. But I didn't kill him till maybe a year and a half later.  I killed him in my Journal with my ballpoint pen... <br class="u-margin-bottom-small-1">After that experience I found out that by hating something or somebody, that I was only hurting myself.  I wasn't hurting the people I was hating.  This came out of the Journal - after I killed that guy with my pen..."<br class="u-margin-bottom-small-1">
+"I'm not too quick to hit anymore. Before, you could say anything and I'd go off like that and the first thing that would come to my mind is "hit 'em."  Now, I take consideration. People are telling me about my attitudes changing. I found it myself..."<sup>1</sup>
+                    </blockquote>
+                        <p class="right-span"></p>
+                  </div>
+
+              <div class="quotes" id="res-endorse">
+                <blockquote>
+            "Everyone was lost in the adventure toward the self...Something had been opened in each of our lives.  A once dead conscience was awakening."<sup>2</sup>
+                    </blockquote>
+                        <p class="right-span">Charles H Evans, II</p>
+                  </div>
+
+              <div class="quotes">
+                <blockquote>
+            "The men [inmates] are less aggreesive, resulting in fewer disciplinary writeups.  The Intensive Journal method helps them deal with the painful aspects of their lives, rather than diverting it through inappropriate behavior....I find that the men are more interested in mentoring other inmates."<sup>3</sup>
+                    </blockquote>
+                        <p class="right-span">Harvey Shrum, EdD <br>Pre-parole Director, Folsom State Prison, Folsom, California</p>
+                  </div>
+
+              <div class="quotes">
+                <blockquote>
+            "It's amazing to see what they [inmates] start doing to help each other once they realize they're not an enemy to themselves, so others aren't enemies to them....He [an inmate] got men of different ethnic backgrounds to play music together, which they had never dared to do before.... To see them giving each other big hugs at the workshops, without any words needing to be said, is so touching."<sup>4</sup>
+                    </blockquote>
+                        <p class="right-span">Marcella Hardt</p>
+                  </div>
 
 
-                  <p><br>
-                    Articles pertaining to the use of the Intensive Journal method with populations in rehabilitation are found in the criminal justice section.
+
+
+                  <hr class="trademark-line u-margin-top-small-1">
+
+                  <p>
+                    <sup>1</sup>
+                   "New York State Department of Labor Job-Training Program:  Applying the Progoff Intensive Journal® Method"
                   </p>
-
+                  <p>
+                    <sup>2</sup>
+                  "Awakening Behind the Walls In An <em>Intensive Journal®</em> Workshop," by Charles H Evans, II, Fellowship in Prayer, vol 37, no. 5,October 1986, pp. 43-46.
+                  </p>
+                  <p>
+                    <sup>3</sup>
+                  "An Interview With Harvey Shrum, Ed.D.," by Jessica Haas,  <em>Progoff</em> &trade;  Criminal Justice Newsletter, Fall 2005, Vol. 1, Issue 1.
+                  </p>
+                  <p>
+                    <sup>4</sup>
+                    "An Interview With Marcella Hardt," by Dale Raben,  <em>Progoff</em> &trade;  Criminal Justice Newsletter, Fall 2005, Vol. 1, Issue 1.
+                  </p>
 
 
                 </div>
