--- a/resolution.html
+++ b/resolution.html
@@ -155,22 +155,19 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Job Training &mdash; Articles</h5>
-                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
+                    <h5 class="heading-five">Specialized Audiences &mdash; Conflict Resolution</h5>
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="jobtraining.html">Overview</a></li>
+                      <li><a href="resolution.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="joboutcomes.html">Outcomes</a></li>
+                      <li><a href="res-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobbenefits.html">Benefits</a></li>
+                      <li><a href="res-endorse.html">Endorsements</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="jobresearch.html">Research</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="jobarticles.html">Articles</a></li>
+                      <li><a href="res-articles.html">Articles</a></li>
 
                     </ul>
                     <hr class="work-hr">
@@ -181,39 +178,34 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Articles</h1>
+                  <h1>Overview</h1>
 
-                  <ul class="article-link">
+                  <p>
+              The Progoff&trade; methodology provides practical techniques to:
+                  </p>
+                  <ul>
                     <li>
-                        <a href="articles/no-longer-theory.html">
-No Longer Theory: Correctional Practices That Work    </a>by Harvey Shrum Ed. D., <br><em>Journal of Correctional Education, </em>
-September 2004, Volume 55, Issue 3, pp. 225-235.
+                      Work through issues in a supportive and safe environment, relating to feelings about 		other ethnic/racial/ religious groups in the community;
                     </li>
                     <li>
-                        <a href="articles/behind-walls.html">
-Awakening Behind Walls In An Intensive Journal® Workshop</a>by Charles Evans, II, <br>reprinted from <em> Fellowship in Prayer,</em>
-October 1986, Volume 37, Number 5, pp. 43-46.
+                      By-pass preconceived ways of thinking to achieve dramatic breakthroughs;
                     </li>
                     <li>
-                        <a href="articles/job-training.html">
-                          The New York State Department of Labor Job-Training Program:
-  Applying the Progoff Intensive Journal Method </a><br> <em> by Shirley Sealy and Tom Duffy </em><br> Dr. Progoff's pioneering research on the impact of using the method in an ongoing job training program.
+                      Provide opportunities for bonding between members of groups that hold intense hostile feelings toward each other;
                     </li>
                     <li>
-                        <a href="#">
-                    Rehabilitation Strategies for the Criminal Justice System,</a> <br><em> by Jessica Haas </em> <br><em>Progoff</em>&trade; Criminal Justice Newsletter, Fall 2005, Vol 1, Issue 1, p1.
-                    </li>
-                    <li>
-                        <a href="articles/target-prison.html">
-                      The Intensive Journal Target Prison Program </a> <br><em> by Jon Progoff </em> <br>A final report summarizing the transforming experience for a group of 15 female inmates at the Bedford Hills Correctional Facility in Westchester, New York.
+                      Benefit from major economies of scale and savings created by members doing in-depth
+	work in a group setting under the auspices of our certified instructor.
                     </li>
                   </ul>
 
-
-                  <p><br>
-                    Articles pertaining to the use of the Intensive Journal method with populations in rehabilitation are found in the criminal justice section.
+                  <p>
+                    The Intensive Journal method offers many unique features for dramatically helping your group.
                   </p>
 
+                  <p>
+                    For a brochure on conflict resolution, <a href="conflict-resolution-2019.pdf" target="_blank" class="page-link">click here.</a>
+                  </p>
 
 
                 </div>
